--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -10,8 +10,8 @@
     <script type="module">
         import init, { execute } from "./pkg/dada_web.js";
         init()
-            .then(() => {
-                execute("async fn main() { print(\"Hello, web\").await }")
+            .then(async () => {
+                console.log(await execute("async fn main() { print(\"Hello, web\").await }"))
             });
     </script>
 </body>
