--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>hello-wasm example</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <style type="text/css" media="screen">
+        body {
+            overflow: hidden;
+        }
+
+        #editor {
+            margin: 0;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    </style>
 </head>
 
 <body>
+
+    <pre id="editor">async fn main() { print(\"Hello, web\").await }</pre>
+
+    <script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script type="module">
         import init, { execute } from "./pkg/dada_web.js";
         init()
             .then(async () => {
-                console.log(await execute("async fn main() { print(\"Hello, web\").await }"))
+                var editor = ace.edit("editor");
+                editor.setTheme("ace/theme/twilight");
+                editor.session.on('change', async function (delta) {
+                    // delta.start, delta.end, delta.lines, delta.action
+                    try {
+                        console.log(`text is ${editor.getValue()}`);
+                        console.log(await execute(editor.getValue()));
+                    } catch (e) { }
+                });
+                // editor.session.setMode("ace/mode/javascript");
             });
     </script>
+
 </body>
+
+<body>
+
+</body>
+
+</html>
 
 </html>
