--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -5,50 +5,25 @@
     <meta charset="utf-8">
     <title>hello-wasm example</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <style type="text/css" media="screen">
-        body {
-            overflow: hidden;
-        }
-
-        #editor {
-            margin: 0;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7CSource+Code+Pro:400,700&amp;subset=latin-ext">
 </head>
 
 <body>
-
-    <pre id="editor">async fn main() { print(\"Hello, web\").await }</pre>
-
+    <div class='area'>
+        <h1>Dada source text</h1>
+        <pre id="editor">async fn main() { print(\"Hello, web\").await }</pre>
+    </div>
+    <br>
+    <div class='area'>
+        <h1>Output</h1>
+        <pre id="output"></pre>
+    </div>
     <script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script type="module">
-        import init, { execute } from "./pkg/dada_web.js";
-        init()
-            .then(async () => {
-                var editor = ace.edit("editor");
-                editor.setTheme("ace/theme/twilight");
-                editor.session.on('change', async function (delta) {
-                    // delta.start, delta.end, delta.lines, delta.action
-                    try {
-                        console.log(`text is ${editor.getValue()}`);
-                        console.log(await execute(editor.getValue()));
-                    } catch (e) { }
-                });
-                // editor.session.setMode("ace/mode/javascript");
-            });
-    </script>
-
+    <script src="ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+    <script src="ace/ansi_up.js" type="text/javascript" charset="utf-8"></script>
+    <script src="index.js" type="module" charset="utf-8"></script>
 </body>
-
-<body>
-
-</body>
-
-</html>
 
 </html>
