create a cargo xtask to deploy mdbook

--- a/components/dada-web/index.css
+++ b/components/dada-web/index.css
@@ -18,6 +18,7 @@ body {
 #output {
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
+    white-space: pre-wrap;
 }
 
 .options {
