fix initial source code

--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class='area'>
         <h1>Dada source text</h1>
-        <pre id="editor">async fn main() { print(\"Hello, web\").await }</pre>
+        <pre id="editor">async fn main() { print("Hello, web").await }</pre>
     </div>
     <br>
     <div class='area'>
