--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>hello-wasm example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet"
