dada-web: Let source/output stack vertically on mobile

--- a/components/dada-web/index.css
+++ b/components/dada-web/index.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-wrap: wrap;
     min-height: 800px;
 }
 
@@ -7,6 +8,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-width: 40ch;
     padding: 10px;
 }
 
