--- a/components/dada-web/index.css
+++ b/components/dada-web/index.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     min-height: 800px;
+    font-size: 18px;
 }
 
 .area {
@@ -19,7 +20,6 @@ body {
 
 #output {
     font-family: 'Source Code Pro', monospace;
-    font-size: 1em;
     white-space: pre-wrap;
 }
 
