--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -14,7 +14,13 @@
 <body>
     <div class='area'>
         <h1>Dada source text</h1>
-        <pre id="editor">async fn main() { print("Hello, web").await }</pre>
+
+<pre id="editor">
+async fn main() {
+    print("Hello, web").await
+}
+</pre>
+
     </div>
     <div class='area'>
         <h1>Output</h1>
