--- a/components/dada-web/index.css
+++ b/components/dada-web/index.css
@@ -2,8 +2,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 0 1em;
-    min-height: 800px;
     font-size: 18px;
+    min-height: 90vh;
 }
 
 .area {
@@ -26,6 +26,7 @@ body {
 #editor, #output {
     border: 1px solid black;
     height: 100%;
+    min-height: 20em;
 }
 
 .options {
