quote Duchamp for the initial playground program
This is more fun.

--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -17,7 +17,11 @@
 
 <pre id="editor">
 async fn main() {
-    print("Hello, web").await
+    print("
+        I have forced myself to contradict myself
+        in order to avoid conforming to my own taste.
+          -- Marcel Duchamp
+    ").await
 }
 </pre>
 
