execute up until the cursor

--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -15,7 +15,7 @@
     <div class='area'>
         <h1>Dada source text</h1>
 
-<pre id="editor">
+        <pre id="editor">
 async fn main() {
     print("
         I have forced myself to contradict myself
@@ -33,6 +33,7 @@ async fn main() {
     <script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
     <script src="ace/ansi_up.js" type="text/javascript" charset="utf-8"></script>
+    <script src="ace/viz.js" type="text/javascript" charset="utf-8"></script>
     <script src="index.js" type="module" charset="utf-8"></script>
 </body>
 
