--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -28,7 +28,12 @@ async fn main() {
     </div>
     <div class='area'>
         <h1>Output</h1>
-        <pre id="output"></pre>
+        <div class='output'>
+            <pre id="output"></pre>
+        </div>
+        <div class='graph' id='graph'>
+            <p>Click in the source text to display the state at that point</p>
+        </div>
     </div>
     <script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
