implement a really primitive share button

--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -15,6 +15,9 @@
     <div class='area'>
         <h1>Dada source text</h1>
 
+        <input id="shareButton" type="button" value="share" />
+        <span id="statusSpan"></span>
+
         <pre id="editor">
 async fn main() {
     print("
