--- a/components/dada-web/index.css
+++ b/components/dada-web/index.css
@@ -1,28 +1,34 @@
 body {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0 1em;
     font-size: 18px;
     min-height: 90vh;
 }
 
-.area {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-width: 40ch;
+.grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    width: 100%;
+    height: 100%;
 }
 
-.output {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
+.editor-cell {
+    grid-column: 1;
+    grid-row: 1 / 3;
 }
 
-.graph {
-    flex: 2;
-    display: flex;
-    flex-direction: row;
+.output-cell {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.heap-before-cell {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.heap-after-cell {
+    grid-column: 2;
+    grid-row: 3;
 }
 
 #editor {
@@ -53,5 +59,4 @@ body {
     position: absolute;
     border-bottom: 2px solid yellow;
     /*background-color: darkslategrey;*/
-    
 }
