mess with html/css some more
things still look terrible but good enough

--- a/components/dada-web/index.html
+++ b/components/dada-web/index.html
@@ -31,15 +31,17 @@ async fn main() {
 
         </div>
         <div class='output-cell'>
-            <h1>Output</h1>
+            <h2>Output</h2>
             <pre id="output"></pre>
         </div>
         <div class='heap-before-cell'>
+            <h2>State before selected statement</h2>
             <div id='heap-before'>
                 <p>Click in the source text to display the state at that point</p>
             </div>
         </div>
         <div class='heap-after-cell'>
+            <h2>State after selected statement</h2>
             <div id='heap-after'>
                 <p>Click in the source text to display the state at that point</p>
             </div>
