--- a/components/dada-web/index.css
+++ b/components/dada-web/index.css
@@ -19,6 +19,7 @@ body {
 .output-cell {
     grid-column: 2;
     grid-row: 1;
+    overflow: scroll;
 }
 
 .heap-before-cell {
@@ -39,10 +40,13 @@ body {
 #output {
     font-family: 'Source Code Pro', monospace;
     white-space: pre-wrap;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    border: 1px solid black;
 }
 
-#editor, #output {
-    border: 1px solid black;
+#editor {
     height: 100%;
     min-height: 20em;
 }
