--- a/book/src/pages/playground.css
+++ b/book/src/pages/playground.css
@@ -5,19 +5,23 @@
 }
 
 .execute-output {
+    background-color: var(--ifm-color-emphasis-100);
     font-family: 'Source Code Pro', monospace;
     height: 30vh;
     width: 95%;
-    border: 2px solid black;
+    padding: 8px 10px;
+    border-left: 4px solid var(--ifm-color-emphasis-500);
     white-space: pre-wrap;
     overflow: auto;
 }
 
 .ir-output {
+    background-color: var(--ifm-color-emphasis-100);
     font-family: 'Source Code Pro', monospace;
     height: 80vh;
     width: 95%;
-    border: 2px solid black;
+    padding: 8px 10px;
+    border-left: 4px solid var(--ifm-color-emphasis-500);
     white-space: pre-wrap;
     overflow: auto;
 }
