style: improve appearance of mode controls
* add some space on the left of the "Dada Playground" header and control elements
* clicking the model label switches modes
* set cursor over mode label to indicate that it is clickable

--- a/book/src/pages/playground.css
+++ b/book/src/pages/playground.css
@@ -1,9 +1,3 @@
-.ide {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px
-}
-
 .execute-output {
     background-color: var(--ifm-color-emphasis-100);
     font-family: 'Source Code Pro', monospace;
@@ -13,6 +7,24 @@
     border-left: 4px solid var(--ifm-color-emphasis-500);
     white-space: pre-wrap;
     overflow: auto;
+}
+
+.ide {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px
+}
+
+.ide .editor-cell .share {
+    padding-left: 0.5rem;
+}
+
+.ide .editor-cell .ir-options {
+    padding-left: 0.5rem;
+}
+
+.ir-options label:hover {
+    cursor: pointer;
 }
 
 .ir-output {
@@ -28,4 +40,8 @@
 
 .heap-cell {
     margin-top: 20px;
+}
+
+.main-wrapper main h1 {
+    padding-left: 0.5rem;
 }
