integrate serde, jsontree

--- a/components/dada-debug/templates/index.hbs
+++ b/components/dada-debug/templates/index.hbs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Dada Debug Log</title>
+{{> header title="Dada Debug Log"}}
 </head>
 <body>
 <h1>Dada Debug Log</h1>
@@ -24,5 +23,6 @@
 {{/if}}
 {{/each}}
 </ul>
+
 </body>
 </html>
