--- a/components/dada-debug/templates/log.hbs
+++ b/components/dada-debug/templates/log.hbs
@@ -2,9 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Debug log</title>
+{{> header title="Debug log"}}
     <style>
         .nested {
             display: none;
