--- a/components/dada-debug/templates/task_children.hbs
+++ b/components/dada-debug/templates/task_children.hbs
@@ -1,10 +1,10 @@
 {{#each children}}
 <li class="event">
-    {{> render_event this ../events_flat}}
+    {{> render_event this=(index events_flat this.timestamp.index)}}
     {{#if children}}
     <span class="caret"></span>
     <ul class="nested">
-        {{> task_children this ../events_flat}}
+        {{> task_children this=this events_flat=../events_flat}}
     </ul>
     {{/if}}
 </li>
