--- a/components/dada-debug/templates/log.hbs
+++ b/components/dada-debug/templates/log.hbs
@@ -58,58 +58,71 @@
     </div>
 
     <h1>By task</h1>
-    <ul>
-        {{#each tasks}}
-        <li> <a name="task{{@index}}"></a>
-            Task {{@index}}
-            <span class="event-value jsontree">{{description}}</span>
-            <div class="event">
-                <span class="caret"></span>
-                <ul class="nested">
-                    {{#each events}}
-                    {{#with (index ../../events_flat index)}}
-                    <li>{{> render_event this=this}}</li>
-                    {{/with}}
-                    {{/each}}
-                </ul>
-            </div>
-        </li>
-        {{/each}}
-    </ul>
-
-    <h1>By time</h1>
-    <ul>
-        {{#each events_flat}}
-        <li> <a name="event_flat{{@index}}"></a>
-            Event {{@index}} {{> render_event this=this}}
-        </li>
-        {{/each}}
-    </ul>
-
-    <h1>By infer</h1>
-    <div id="tasks">
-        <ol>
-            {{#each infers}}
-            <li> <a name="infer{{@index}}">
-                    Infer variable {{@index}}
-                    <ul>
-                        <li> Created at
-
-                            {{#with (index ../events_flat created_at.index)}}
-                            {{> render_event this=this}}
-                            {{/with}}
-
-                            {{#each modifications}}
-                        <li> Modification
-
+    <div class="event">
+        <span class="caret"></span>
+        <div class="nested">
+            <ul>
+                {{#each tasks}}
+                <li> <a name="task{{@index}}"></a>
+                    Task {{@index}}
+                    <span class="event-value jsontree">{{description}}</span>
+                    <div class="event">
+                        <span class="caret"></span>
+                        <ul class="nested">
+                            {{#each events}}
                             {{#with (index ../../events_flat index)}}
-                            {{> render_event this=this}}
+                            <li>{{> render_event this=this}}</li>
                             {{/with}}
                             {{/each}}
-                    </ul>
-            </li>
-            {{/each}}
-        </ol>
+                        </ul>
+                    </div>
+                </li>
+                {{/each}}
+            </ul>
+        </div>
+    </div>
+
+    <h1>By time</h1>
+    <div class="event">
+        <span class="caret"></span>
+        <div class="nested">
+            <ul>
+                {{#each events_flat}}
+                <li> <a name="event_flat{{@index}}"></a>
+                    Event {{@index}} {{> render_event this=this}}
+                </li>
+                {{/each}}
+            </ul>
+        </div>
+    </div>
+
+    <h1>By infer</h1>
+    <div class="event">
+        <span class="caret"></span>
+        <div class="nested">
+            <ol>
+                {{#each infers}}
+                <li> <a name="infer{{@index}}">
+                        Infer variable {{@index}}
+                        <ul>
+                            <li> Created at
+
+                                {{#with (index ../events_flat created_at.index)}}
+                                {{> render_event this=this}}
+                                {{/with}}
+
+                                {{#each events}}
+                            <li>
+
+                                {{#with (index ../../events_flat index)}}
+                                {{> render_event this=this}}
+                                {{/with}}
+                                {{/each}}
+                        </ul>
+                </li>
+                {{/each}}
+            </ol>
+        </div>
     </div>
 
     <script>
